<resources>
    <string name="app_name">pChat</string>

    <!-- Страницы регистрации и входа -->
    <string name="prompt_login">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_password_repeat">Повторите пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_offer">Уже есть аккаунт? <b>Войти</b></string>
    <string name="action_sign_up">Зарегистрироваться</string>
    <string name="action_sign_up_offer">Ещё нет аккаунта? <b>Зарегистрироваться</b></string>

    <string name="error_field_required">Поле обязательно к заполнению</string>

    <string name="error_invalid_login_sign">Логин может состоять только из английских букв и цифр</string>
    <string name="error_invalid_login_first_letter">Логин должен начинаться на букву</string>
    <string name="error_invalid_login_length">Логин должен быть не менее %d и не более %d символов</string>

    <string name="error_invalid_password_sign">Пароль может состоять только из английских букв, цифр, знаков \'_\' и \'-\'</string>
    <string name="error_invalid_password_length">Пароль должен быть не менее %d символов и не более %d символов</string>

    <string name="error_invalid_password_repeat">Пароли не совпадают</string>

    <string name="error_incorrect_credentials">Неверный логин или пароль</string>
    <string name="error_user_exists">Пользователь с таким логином уже существует</string>

    <string name="error_server">Ошибка сервера. Попробуйте позже</string>
    <string name="error_network">Нет сети. Проверьте подключение к интернету</string>

    <!-- Меню -->
    <string name="menu_logout">Выйти</string>
    <string name="menu_settings">Настройки</string>

    <!-- Чат -->
    <string name="prompt_message">Сообщение</string>
    <string name="prompt_empty_messages">Сообщений нет. Начти общение, будь первым!</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
